--- a/index.html
+++ b/index.html
@@ -1,12 +1,48 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Meta Tags -->
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;400;500;600;700&family=Open+Sans:wght@200;300;400;500&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="PCEA Mukinyi Parish" />
+    <meta
+      name="description"
+      content="Welcome to Mukinyi Parish, a vibrant Christian community dedicated to worship, fellowship, and service. Explore our diverse ministries, engaging events, and impactful outreach programs. Join us on our journey of faith and service to make a difference in our local community and beyond. Plan your visit today!"
+    />
+    <meta
+      name="keywords"
+      content="PCEA Mukinyi Parish, Nairobi, Kenya, worship services, community outreach, youth fellowship, Nairobi churches, Kenyan churches"
+    />
+
+    <!-- Favicon -->
+    <link rel="icon" href="/Logo_Plain/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/Logo_Plain/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/Logo_Plain/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/Logo_Plain/favicon-16x16.png"
+    />
+
+    <!-- Google Font -->
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;400;500;600;700&family=Open+Sans:wght@200;300;400;500&display=swap"
+      rel="stylesheet"
+    />
+
     <title>PCEA MUKINYI CHURCH</title>
   </head>
   <body>
